--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <hr>
 
   <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
-  <img src ="assets/images/movie-ranking.png" height="200">
+  <img src ="./movie-ranking.png" height="200">
 
 
 
