--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 
 
-  <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
-  <img src ="assets/images/birthday-invite.png" height="200" alt="Birthday website pic">
+  <a href="./birthday-invite.html"><h2>Birthday Invite Project</h2></a>
+  <img src ="./birthday-invite.png" height="200" alt="Birthday website pic">
   <hr>
 
-<a href="./public/about.html"><h3>About Me</h3></a> 
-<a href="./public/contact.html"><h3>Contact Me</h3></a>
+<a href="./about.html"><h3>About Me</h3></a> 
+<a href="./contact.html"><h3>Contact Me</h3></a>
 
 </body>
 </html>
