--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <hr>
 
-  <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
+  <a href="./movie-ranking.html"><h2>Movie Ranking Project</h2></a>
   <img src ="./movie-ranking.png" height="200">
 
 
